--- a/Web/d3/index1.html
+++ b/Web/d3/index1.html
@@ -8,10 +8,42 @@
 </head>
 <body>
     <form class="login-form">
-        <input type="email" name="" id="" class="login-input" placeholder="Email" required/>
-        <input type="password" name="" id="" class="login-input" placeholder="Password" required/>
+        <input type="email" name="" id="email" class="login-input" placeholder="Email" required/>
+        <input type="password" name="" id="password" class="login-input" placeholder="Password" required/>
         <input type="submit" value="login" class="login-btn"/>
     </form>
 
 </body>
+<script>
+    console.log("Hello");
+    // alert("Hello")
+
+    let x="Hi";
+    console.log(x);
+    x=30
+    console.log(x);
+    x=false
+    console.log(x);
+    x=null
+    console.log(x);
+    x=undefined
+    console.log(x);
+    let obj ={
+        name:"a",
+        loc:"b",
+        age : 200,
+        isalive:false
+    }
+    let obj2 ={
+        name:"a2",
+        loc:"b2",
+        age : 0,
+        isalive:true
+    }
+    let a=2;
+    console.log(a);
+    console.log(obj,obj2);
+    let arr=[a,obj,x,obj2,"b"]
+    console.log(arr);
+</script>
 </html>
