--- a/Web/d3/index1.html
+++ b/Web/d3/index1.html
@@ -7,27 +7,30 @@
     <link rel="stylesheet" href="./style1.css">
 </head>
 <body>
-    <form class="login-form">
+    <form class="login-form" onsubmit="Login(event)">
         <input type="email" name="" id="email" class="login-input" placeholder="Email" required/>
         <input type="password" name="" id="password" class="login-input" placeholder="Password" required/>
+        <!-- <a href="https://www.google.com/search?q=gfg&rlz=1C1VDKB_enIN1079IN1079&oq=&gs_lcrp=EgZjaHJvbWUqCQgCECMYJxjqAjIJCAAQIxgnGOoCMgkIARAjGCcY6gIyCQgCECMYJxjqAjIJCAMQIxgnGOoCMgkIBBAjGCcY6gIyCQgFECMYJxjqAjIJCAYQIxgnGOoCMgkIBxAjGCcY6gLSAQk4NzA1ajBqMTWoAgiwAgE&sourceid=chrome&ie=UTF-8">forgot password</a> -->
         <input type="submit" value="login" class="login-btn"/>
+        
     </form>
+    <!-- <button class="input-btn" onclick="myfunction()">click</button> -->
 
 </body>
 <script>
-    console.log("Hello");
+    // console.log("Hello");
     // alert("Hello")
 
     let x="Hi";
-    console.log(x);
+    // console.log(x);
     x=30
-    console.log(x);
+    // console.log(x);
     x=false
-    console.log(x);
+    // console.log(x);
     x=null
-    console.log(x);
+    // console.log(x);
     x=undefined
-    console.log(x);
+    // console.log(x);
     let obj ={
         name:"a",
         loc:"b",
@@ -35,15 +38,61 @@
         isalive:false
     }
     let obj2 ={
-        name:"a2",
+        name:"a1",
         loc:"b2",
         age : 0,
         isalive:true
     }
-    let a=2;
-    console.log(a);
-    console.log(obj,obj2);
+    // let a=2;
+    console.log(obj2.name)
+    const{ name,loc, age,isalive}=obj2
+    console.log(name)
+
+    // console.log(a);
+    // console.log(obj,obj2);
     let arr=[a,obj,x,obj2,"b"]
-    console.log(arr);
+    // console.log(arr);
+    let arr2=[1,2,3,4,5,6]
+    // console.log(arr2);
+    let arr3=[arr,"siri",arr2]
+    let arr4=[...arr,"siri",...arr2]
+    // console.log(arr3);
+    // console.log(arr4);
+    let arr5=[...arr]
+    // console.log(arr5);
+    function myfunction(){
+        // console.log("hello");
+        console.warn("warning");
+        console.error("error");
+    }
+    // myfunction()
+    function Login(event){
+        event.preventDefault()
+        let email=document.getElementById('email').value;
+        let password=document.getElementById('password').value;
+        console.log("Login :" +email+ " " +password);
+        if (password.length<5){
+            alert('password should contain more than 5 letters')
+        }else if(email==="sirisamala09@gmail.com" && password==="123456"){
+            alert('Login success!')
+            API()
+        }else{
+            alert('lnvalid credintials')
+        }
+    }   
+    async function API(){
+        console.log("called API")
+        try {
+            const response =await fetch('https://671b713c2c842d92c37fefcf.mockapi.io/products')
+            if(response.status===200){
+                console.log("success")
+                console.log(await response.json())
+            }
+            
+        } catch (error) {
+            console.error(error)
+        }
+    }
+
 </script>
 </html>
